fix box size on tablet and desktop

--- a/pages/login/login.css
+++ b/pages/login/login.css
@@ -4,6 +4,7 @@
     margin: 0;
 }
 body{
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
